# Project_CG

./: .clang-format  .clang-tidy  .gitignore  CG_TermProject.sln  CG_TermProject.vcxproj  CG_TermProject.vcxproj.filters  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
Framework/: Application.cpp  Application.h  Input.h  Vector2D.h  Vector3D.h  Window.cpp  Window.h
Framework/Audio/: AudioClip.cpp  AudioClip.h  AudioSource.cpp  AudioSource.h
Framework/Graphics/: Renderer.h  Shader.h
Framework/Templates/: Singleton.h
Game/: Main.cpp
